# Desktool

./: .gitignore  README.md  package.json
docs/superpowers/plans/: 2026-05-23-desktool-implementation.md
docs/superpowers/specs/: 2026-05-23-desktool-cyberpunk-design.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
