[package]
name = "desktool"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["process-exit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
